[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/enemies/fish/BadFish1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/enemies/fish/BadFish2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/enemies/fish/BadFish3.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/enemies/fish/BadFish4.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/enemies/fish/BadFish5.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/enemies/fish/BadFish6.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/enemies/fish/BadFish7.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/enemies/fish/BadFish8.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/enemies/fish/BadFish9.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/enemies/fish/BadFish10.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/enemies/fish/BadFish11.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/enemies/fish/BadFish12.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/enemies/fish/BadFish13.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/enemies/not_fish/Jellyfish1.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/enemies/not_fish/Octopus1.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/enemies/not_fish/Turtle1.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Background/WaterEffect.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/UI/HUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Background/parallaxBG.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/Background/parallaxSeaEnvironment.tscn" type="PackedScene" id=21]
[ext_resource path="res://Sounds/gameover.wav" type="AudioStream" id=22]
[ext_resource path="res://Sounds/House In a Forest Loop.ogg" type="AudioStream" id=23]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -6.48004, -2.05524, 0, 0, 0, 0, 475.044, -2.05524, 0, 0, 0, 0, 481.551, 710.47, 0, 0, 0, 0, -6.48004, 710.47, 0, 0, 0, 0, -9.73358, -2.05524 )
}

[node name="Game" type="Node"]
script = ExtResource( 1 )
enemy_fishes = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ]
enemy_not_fishes = [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]

[node name="Fish_Pos" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 240, 360 )

[node name="FishCam" type="Camera2D" parent="Fish_Pos"]
position = Vector2( 0.762024, 1.14301 )
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 0.7, 0.7 )
limit_smoothed = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="WaterEffect" parent="Fish_Pos" instance=ExtResource( 18 )]

[node name="EnemyPath" type="Path2D" parent="Fish_Pos"]
editor/display_folded = true
position = Vector2( -240, -360 )
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="Fish_Pos/EnemyPath"]
position = Vector2( -6.48004, -2.05524 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 360 )

[node name="HUD" parent="." instance=ExtResource( 19 )]

[node name="parallaxBG" parent="." instance=ExtResource( 20 )]
editor/display_folded = true

[node name="parallaxSeaEnvironment" parent="parallaxBG" instance=ExtResource( 21 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ScoreTimer" type="Timer" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[connection signal="restart_game" from="HUD" to="." method="restart_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
